fixed header font size on mobile

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -60,7 +60,7 @@ h1 {
           transparent
           transparent;
   }
-  @media only screen and (max-width: 520px) {
+  @media only screen and (max-width: 768px) {
       h1{
           font-size: 32px;
       }
